      management interface to fail to preserve and restore video memory
      allocations when the NVreg_TemporaryFilePath module parameter for
      nvidia.ko specified an invalid path.
  * New upstream release 390 series.
    - Fixed a bug that caused nvidia-drm.ko to crash when loading with
      DRM-KMS enabled (modeset=1) on Linux v5.14.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 27 Sep 2021 13:26:37 +0200

nvidia-graphics-drivers (470.63.01-1) unstable; urgency=medium

  * New upstream production branch release 470.63.01 (2021-08-10).
    - Added an application profile to disable FXAA for Firefox to prevent
      visual corruption.
    - Added support for the VK_KHR_wayland_surface extension.
    - Fixed a Vulkan performance regression that affected rFactor2.
    (Closes: #994633)

  [ Andreas Beckmann ]
  * libegl-nvidia0: Ship new library libnvidia-vulkan-producer.so.#VERSION#
    but do not provide alternatives since it is unclear how this undocumented
    SONAME-less library is supposed to be used.
  * Add Build-Depends: libnvidia-egl-wayland-dev.
  * nvidia-kernel-support: Restore nvidia-modprobe.conf which might have gone
    missing due to bugs in debhelper (#994919) and dpkg (#995387).
    (Closes: #994971)

 -- Andreas Beckmann <anbe@debian.org>  Thu, 30 Sep 2021 18:55:41 +0200

nvidia-graphics-drivers (470.57.02-3) unstable; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.  (Closes: #994860)
  * Generate tight dependencies on libnvidia*-glcore/libnvidia*-eglcore.
    (Closes: #992057)
  * Bump Standards-Version to 4.6.0. No changes needed.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 22 Sep 2021 10:56:55 +0200

nvidia-graphics-drivers (470.57.02-2) unstable; urgency=medium

  * Upload to unstable.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 02 Aug 2021 13:23:11 +0200
