@@ -4,7 +4,7 @@ hardening-no-bindnow
 hardening-no-fortify-functions
 
 # Use wildcard instead of exact path substitution, this is a M-A: same package.
-embedded-library usr/lib*/libnvidia-cbl.so.#VERSION#: zlib
+embedded-library zlib usr/lib*/libnvidia-cbl.so.#VERSION#
 
 # The libnvidia-cbl.so.* SONAME changes with every upstream
 # release.
