@@ -1,5 +1,4 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
 exit-in-shared-library
 spelling-error-in-binary
 hardening-no-bindnow
