@@ -1,11 +1,10 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 
 # Use wildcard instead of exact path substitution, this is a M-A: same package.
-embedded-library usr/lib*/libnvidia-ptxjitcompiler.so.#VERSION#: zlib
+embedded-library zlib usr/lib*/libnvidia-ptxjitcompiler.so.#VERSION#
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
