@@ -17,6 +17,7 @@ nvidia-graphics-drivers (470.74-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 27 Sep 2021 13:26:37 +0200
 
